# hogosu

./: Cargo.toml  LICENSE  README.md  license.rs  package.json
.github/: FUNDING.yml
script/Say_randomNumber ()/: .ps1
scripts/CHOCO:choco_("command name")/CHOCO:choco_version/: .ps1
scripts/GetACCESS_*type*()/GetACCESS_MIDI()/: .js
scripts/Get_PessoalInformation/: .ps1
scripts/MEGAerrorpayload/: .js
scripts/Say_randomNumber ()/: .js  .ps1
scripts/ckeckbox()/: .html
scripts/displayPopUp/: .html  .js
scripts/form(*type*)/form(NAME)/: .js
scripts/getRamdom.number()/: .html
scripts/getRamdomnumber()/: .js
scripts/hogo:CONSOLE_("command name")/hogo:CONSOLE_ShowMemory ()/: .js
scripts/imgName/: .js
scripts/load_(game_name) ()/load_DoHarlemShake ()/: .js
scripts/load_(game_name) ()/load_KICKASS()/: .js
scripts/open(url)/open(websiteurl)/: .js
scripts/open_("meme name")_MEME ()/open_ALL_MEME ()/: .js
scripts/open_("meme name")_MEME ()/open_bruh_MEME ()/: .js
scripts/open_("meme name")_MEME ()/open_buttercup_MEME ()/: .js
scripts/open_("meme name")_MEME ()/open_eeeaaaooo_MEME ()/: .js
scripts/open_("meme name")_MEME ()/open_momgetthecamera_MEME ()/: .js
scripts/open_("meme name")_MEME ()/open_sadviolinairhorn_MEME ()/: .js
scripts/say (text)/print (text)/: .js
scripts/say (text)/say (text)/: .js
scripts/say (text)/show (text)/: .js
scripts/useCamera/: .html
